<resources>
    <string name="app_name">ExerciseBuddy</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration_error">Registration error</string>
    <string name="login_error">Login error</string>
    <string name="name_hint">Name</string>
    <string name="name">Name: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="anyone">Anyone</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="update">Update</string>
    <string name="user_statement">I am a:</string>
    <string name="born">Born on:</string>
    <string name="user_experience_level">I would classify my experience level as:</string>
    <string name="older_than">Older than: </string>
    <string name="younger_than">And younger than: </string>
    <string name="years_old">Years old</string>
    <string name="preference_experience_level">With an experience level of:</string>
    <string name="running">Running</string>
    <string name="hiking">Hiking</string>
    <string name="biking">Biking</string>
    <string name="weight_lifting">Weight lifting</string>
    <string name="swimming">Swimming</string>
    <string name="rock_climbing">Rock Climbing</string>
    <string name="choose_exercise">Choose an exercise you would like to find a buddy for:</string>
    <string name="select_gender">Select your gender: </string>
    <string name="select_experience_level">Select your level of experience:</string>
    <string name="select_DOB">Select your date of birth: </string>
    <string name="next">Continue</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="no_preference">No preference</string>
    <string name="lower_age_range">The youngest person I would exercise with is:</string>
    <string name="upper_age_range">The oldest person I would exercise with is:</string>
    <string name="select_gender_preference">What gender do you want your exercise buddy to be?</string>
    <string name="upload_profile_image">Upload an image to be your profile picture (optional):</string>
    <string name="select_experience_level_preference">What experience level do you want your exercise buddy to be?</string>
    <string name="description_text">Tell us about yourself (optional):</string>
    <string name="description_hint">Write something about yourself for others to read (optional)</string>
    <string name="exercise_preference">I want to go:</string>
    <string name="gender_preference">My gender preference to exercise with is:</string>
    <string name="experience_level_preference">My experience level preference to exercise with is:</string>
    <string name="edit_preferences">Edit preferences</string>
    <string name="edit_profile">Edit profile</string>
    <string name="experience_level">Experience level: </string>
    <string name="gender">Gender: </string>
    <string name="age">Age: </string>
    <string name="bio">Bio: </string>
    <string name="date_of_birth">Date of birth: </string>
    <string name="send_message">Send message</string>
    <string name="message_hint">Type message...</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="conversations">Conversations</string>
    <string name="message_send_failure">Message failed to send!</string>
    <string name="matches">Matches</string>
    <string name="block_user">Block user</string>
    <string name="unblock_user">Unblock user</string>
    <string name="go_back">Go back</string>
    <string name="match_profile">Match profile</string>
</resources>
