<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.bignerdranch.android.exercisebuddy.viewmodels.ExerciseSelectionActivityViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_profile_image"
            android:textSize="28dp"
            android:layout_margin="12dp"
            android:textAlignment="center"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="uploadProfileImage"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:layout_margin="12dp"
            android:text="@string/description_text"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_height="110dp"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/user_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:scrollbars="vertical"
                android:hint="@string/description_hint"
                android:gravity="top|left"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/next"
            android:onClick="goToRegisterActivity"/>
    </LinearLayout>
</layout>