<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.bignerdranch.android.exercisebuddy.viewmodels.MatchProfileActivityViewModel" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/missing_profile_image"
            android:layout_margin="10dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/age_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/gender_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/experience_level_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_chat"
            android:layout_margin="10dp"
            android:onClick="goToMessagingActivity"
            goneUnless="@{viewModel.hasConversation}"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="right"
            goneUnless="@{!viewModel.hasConversation}">
            <EditText
                android:id="@+id/first_message_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:maxHeight="200dp"
                android:scrollbars="vertical"
                android:hint="@string/message_hint"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send_message"
                android:onClick="sendFirstMessage"/>
        </LinearLayout>
    </LinearLayout>
</layout>